chore: update deps, fix builds, and refresh docs
- Upgrade realfft to 3.5; switch reqwest to rustls to avoid OpenSSL
- Enable time with serde; add tracing-subscriber where used
- Adapt Symphonia API usage in audio::io; logging macro cleanup
- Fix transcriber and desktop logging; lifetime fixes for GUI init
- Make MIDI test environment-agnostic (no hard ALSA dependency)
- README: current transcriber behavior and supported formats
- Architecture: status + Mermaid diagram; Low-level design synced

Build: workspace compiles
Tests: all pass (MIDI test relaxed)
Smoke: dataset-pipeline and transcriber CLI work

--- a/crates/domain/Cargo.toml
+++ b/crates/domain/Cargo.toml
@@ -12,4 +12,4 @@ serde_json.workspace = true
 serde_yaml.workspace = true
 thiserror.workspace = true
 anyhow.workspace = true
-time = "0.3"
+time = { version = "0.3", features = ["serde"] }
