--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,9 +46,10 @@ sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio",
 
 # Machine learning
 ort = { version = "1", default-features = false, features = ["download-binaries"] }
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
 
 # Math / DSP utilities
-realfft = "0.12"
+realfft = "3.5"
 ndarray = { version = "0.15", features = ["serde"] }
 
 # Testing
