--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -11,7 +11,7 @@ anyhow.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 tokio.workspace = true
 
 [dependencies.taal-domain]
