--- a/crates/transcriber/Cargo.toml
+++ b/crates/transcriber/Cargo.toml
@@ -15,6 +15,8 @@ clap.workspace = true
 tokio.workspace = true
 ndarray.workspace = true
 ringbuf.workspace = true
+time = "0.3"
+tracing-subscriber.workspace = true
 
 [dependencies.taal-domain]
 path = "../domain"
