--- a/tools/dataset-pipeline/Cargo.toml
+++ b/tools/dataset-pipeline/Cargo.toml
@@ -11,6 +11,7 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
+tracing-subscriber.workspace = true
 clap.workspace = true
 
 [dependencies.taal-domain]
