--- a/.gitignore
+++ b/.gitignore
@@ -184,9 +184,9 @@ cython_debug/
 # Visual Studio Code
 #  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+#  and can be added to the global gitignore or merged into this file. If you prefer to exclude
+#  per-user VS Code settings from the repo, ignore the folder:
+.vscode/
 
 # Ruff stuff:
 .ruff_cache/
