--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -16,6 +16,9 @@ tracing-subscriber.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["winuser", "windef"] }
+
 [dependencies.taal-domain]
 path = "../../crates/domain"
 
