--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -15,6 +15,12 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+rfd = "0.14"
+time = "0.3"
+symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "vorbis", "wav"] }
+cpal.workspace = true
+midir.workspace = true
+dirs = "5"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winuser", "windef"] }
