feat(studio): MusicXML import; selection gestures and undo/redo polish\n\n- Import MusicXML (.musicxml/.xml) to LessonDescriptor (minimal percussion mapping)\n- Ctrl/Cmd-click toggles selection; box-select without modifier\n- Undo/redo covers add/delete/drag, quantize-all, recorded MIDI\n- Lane mute/solo, dimmed rendering, preview filtering

--- a/crates/domain/Cargo.toml
+++ b/crates/domain/Cargo.toml
@@ -13,3 +13,4 @@ serde_yaml.workspace = true
 thiserror.workspace = true
 anyhow.workspace = true
 time = { version = "0.3", features = ["serde"] }
+quick-xml = "0.30"
