UI/UX overhaul: bottom docks (Studio/Practice), ruler A/B handles (Studio), horizontal M/S pills, Light/HC contrast tuning, countdown (seconds) + centered review, numbers as integers/percents; Settings rename to 'Test loops before review'; docs synced (README, ARCHITECTURE, LOW_LEVEL_DESIGN, UX_SPECS, ASSETS); assets list + tinting guidance; PR summary updated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/notation",
     "crates/tutor",
     "crates/services",
+    "crates/ui",
     "apps/desktop",
     "tools/dataset-pipeline",
 ]
